# economic-agent

./: .env.example  .gitignore  AGENT.md  Dockerfile   Makefile  README.md  docker-compose.yml  env_example_root_v2.txt  pyproject.toml  requirements.txt
.claude/agents/: economic-intelligence-agent.md
.claude/commands/: analyze.md  ask.md  predict.md  report.md
.claude/rules/: chunking-rules.md  confidence-scoring-rules.md  document-processing-rules.md  economic-intelligence-rules.md  embedding-rules.md  failure-handling-rules.md  financial-analysis-rules.md  global-memory-system-rules.md  hallucination-prevention.md  hybrid-retrieval-rules.md  intent-classification-rules.md  memory-governance-rules.md  memory-lifecycle-rules.md  metadata-schema-rules.md  output-format-rules.md  pdf-processing-rules.md  rag-rules.md  retrieval-governance-rules.md  retrieval-indexing-strategy-rules.md  retrieval-rules.md  source-priority-rules.md
.claude/skills/data-ingestion/: SKILL.md
.claude/skills/document-ingestion/: SKILL.md
.claude/skills/financial-report-analysis/: SKILL.md
.claude/skills/financial-summary-generation/: SKILL.md
.claude/skills/news-sentiment-analysis/: SKILL.md
.claude/skills/rag-query/: SKILL.md
.claude/skills/rag-query-reasoning/: SKILL.md
.claude/skills/report-generation/: SKILL.md
.claude/skills/risk-opportunity-analysis/: SKILL.md
.claude/skills/summarization/: SKILL.md
.claude/skills/trend-analysis/: SKILL.md
backend/: __init__.py  admin.py  auth.py  exception_handlers.py  main.py  models.py  trend_engine.py
backend/ingestion/: ingestor.py  parser.py  validation.py
backend/ingestion/chunking/: __init__.py  constants.py  strategy.py
backend/ingestion/excel/: __init__.py  constants.py  extractor.py  metrics.py  normalizer.py  pipeline.py  tagger.py
backend/ingestion/news/: __init__.py  chunker.py  constants.py  extractor.py  pipeline.py  sentiment.py  topics.py
backend/ingestion/pdf/: __init__.py  chunker.py  cleaner.py  constants.py  extractor.py  pipeline.py  (+1 more)
backend/memory/: __init__.py  lifecycle.py
backend/rag/: __init__.py  retriever.py  vector_store.py
backend/services/: agent_service.py  cache.py  error_handler.py  export.py  health.py  job_store.py  logger.py  market_data.py  metrics.py  notify.py  rate_limiter.py  retrieval_governance.py
data/processed/: 20260507152028_Phenikaa.json  20260508044615_Phenikaa.json
data/vector/: chroma.sqlite3
docker/: compose.override.yml
docs/: API.md  ARCHITECTURE.md  Api.md  CONTRIBUTING.md  DEPLOYMENT.md  global-memory-system.md  hybrid-retrieval-system.md  memory-architecture.md  memory-lifecycle.md  metadata-schema.md  phase-1-foundation-system.md  retrieval-indexing-strategy.md  source-priority.md
docs/phases/: phase-1-step-10-memory-governance-rules.md  phase-1-step-11-hybrid-retrieval-system.md  phase-1-step-12-retrieval-governance-rules.md  phase-1-step-13-pdf-processing-pipeline.md  phase-1-step-3-memory-architecture.md  phase-1-step-4-global-memory-system.md  phase-1-step-5-metadata-schema.md  phase-1-step-6-retrieval-indexing-strategy.md  phase-1-step-7-source-priority-rules.md  phase-1-step-8-memory-lifecycle.md  phase-1-step-9-memory-aware-pipeline-integration.md
frontend/: .env.example  package-lock.json
pipelines/: analyze-pipeline.md  ask-pipeline.md  batch_predict.py  predict-pipeline.md  report-pipeline.md  schedule_ingest.py
scripts/: benchmark.py  check_env.py  clear_cache.py  generate_api_key.py  rotate_api_key.py  test_predict.py
tests/: conftest.py  test_admin.py  test_api.py  test_auth.py  test_chunking_strategy.py  test_config.py  test_embedding_pipeline.py  test_excel_pipeline.py  test_exception_handlers.py  test_export.py  test_health.py  test_ingestion.py  test_ingestion_validation.py  test_market_data.py  test_memory_lifecycle.py  test_metrics.py  test_news_pipeline.py  test_notify.py  test_pdf_pipeline.py  test_pipelines.py  test_rate_limiter.py  test_retrieval_governance.py  test_search.py  test_services.py  test_trend_engine.py  test_vector_storage.py  test_websocket.py
(+8 files in other folders)
